--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/witek103/vl53l1x-rs"
 readme = "README.md"
 
 [dependencies]
+embedded-hal = "1.0.0"
 embedded-hal-async = "1.0.0"
 defmt = { version = "0.3.6", optional = true}
 
