Implement initialization procedure
Add method to init sensor with default configuration along with
related methods (i.e. ranging start/stop) needed by it.

Configuration can be adjusted with feature 'io_2v8' (enabled by
default) to select IO voltage levels according to the setup.

Extend RegisterMap with necessary entries.

Signed-off-by: Witold Lipieta <witek103@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,6 @@ embedded-hal-async = "1.0.0"
 defmt = { version = "0.3.6", optional = true}
 
 [features]
+default = ["io_2v8"]
+io_2v8 = []
 defmt = ["dep:defmt"]
